--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 80;
         server_name localhost;
-        root /var/www/html/app; 
+        root /var/www/html;
         index index.php index.html;
 
         location / {
@@ -26,6 +26,5 @@ http {
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
     }
 }
