--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,25 @@ http {
             include fastcgi_params;
         }
 
+        # ===============================
+        # Terminal UI (HTTP)
+        # ===============================
+        location /terminal-ui/ {
+            proxy_pass http://terminal:80/;
+            proxy_set_header Host $host;
+        }
+
+        # ===============================
+        # Terminal WebSocket
+        # ===============================
+        location /terminal-ws/ {
+            proxy_pass http://terminal:3001/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+        }
+
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
