--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - "3001"
     volumes:
       - terminal-home:/root
+      - ./ctf-files:/opt/ctf:ro
     networks:
       - cybervoid-net
 
